--- a/css/gallery.css
+++ b/css/gallery.css
@@ -19,14 +19,14 @@ body {
     display: flex;
     -ms-flex-wrap: wrap; /* IE 10 */
     flex-wrap: wrap;
-    padding: 0 4px;
+    padding: 0px;
 }
 
 /* Create two equal columns that sits next to each other */
 .column {
     -ms-flex: 50%; /* IE 10 */
     flex: 50%;
-    padding: 0 4px;
+    padding: 0px;
 }
 
 .column img {
@@ -43,5 +43,44 @@ body {
     cursor: pointer;
     font-size: 18px;
 }
+.container {
+  position: relative;
+  width: 48%;
+}
 
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding-right: 4px;
+  height: auto%;
+  width: auto%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #4286f4;
+}
+
+.container:hover .overlay {
+  opacity: 0.7;
+}
+
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
 </style>
